--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
     <div class="card" id="mainCard">
         <img id="catGif" src="https://media.giphy.com/media/v1.Y2lkPTc5MGI3NjExOHpueGZ3bmZueXp4Y3R3ZzZ4eXp4eXp4eXp4eXp4eXp4eXp4eXomZXA9djFfaW50ZXJuYWxfZ2lmX2J5X2lkJmN0PWc/Zl7u48zLVFgLpRwq6f/giphy.gif">
         
-        <h1 id="question">Tankii will you be my Valentine? 😎😙</h1>
+        <h1 id="question">Tanviii Babyboo will you be my Valentine? 😎😙</h1>
         
         <div class="btn-container" id="interactionArea">
             <button id="yesBtn">Yes</button>
@@ -231,3 +231,4 @@
     </script>
 </body>
 </html>
+
